# rustmooflax

./: .gitignore  Makefile  README.md  config.mk
setup/: Cargo.toml  Makefile  target.lds
setup/src/: elf64.rs  entry.s  interrupts.rs  lib.rs  segmentation.rs  smem.rs  vm.rs  vmem.rs  vmm.rs  vmx_insn.s
setup/src/vmx/vmcs/: setup.rs
share/: Cargo.toml
share/src/: cpu.rs  cr.rs  dr.rs  exceptions.rs  frame.rs  gpr.rs  interrupts.rs  lib.rs  log.rs  mmap.rs  msr.rs  mtrr.rs  pool.rs  rflags.rs  rmode.rs  segmentation.rs  smap.rs  smem.rs  uart.rs  utils.rs  vm.rs  vmm.rs
share/src/info/: data.rs  mod.rs  setup.rs  vmm.rs
share/src/paging/: map.rs  mod.rs  ptb.rs  utils.rs
share/src/vmx/: insn.rs  mod.rs  regs.rs
share/src/vmx/ept/: map.rs  mod.rs
share/src/vmx/vmcs/: access.rs  enc.rs  mod.rs
vmm/: Cargo.toml  Makefile  target.lds  x86_64-ros.json
vmm/src/: cpumode.rs  idt.s  interrupts.rs  lib.rs  vmx_insn.s
vmm/src/disasm/: api.rs  itab.rs  mod.rs  types.rs
vmm/src/disasm/libudis86/: decode.c  extern.h  types.h  udis86.c
vmm/src/emulate/: mod.rs  rmode.rs
vmm/src/vm/: mem.rs
vmm/src/vmx/: mod.rs
vmm/src/vmx/exit/: excp.rs  mod.rs  reason.rs
vmm/src/vmx/vmcs/: commit.rs
